# Mael

./: .env.example  Dockerfile  README.md  README_FR.md  aiosqlite.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/routes/: __init__.py  agenda.py  auth.py  billing.py  leads.py  notifications.py  organizations.py  projects.py  tickets.py
app/core/: config.py  logging.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  agenda.py  billing.py  core.py  email.py  kanban.py  notification.py  project.py  ticket.py
app/schemas/: agenda.py  billing.py  common.py  notification.py  organization.py  project.py  ticket.py  user.py
app/services/: billing.py  time_tracking.py
documentation/en/: routes.md
documentation/fr/: routes.md
tests/: conftest.py  test_invoice_lock.py  test_time_tracking.py
